add dropdown for responsive

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dgtag</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/MediaQ.css">
 </head>
 <body>
 <header class="header">
@@ -15,14 +16,25 @@
             <img src="assets/img/logodgtag.png" alt="logo" class="logo">
         </div>
         <nav>
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Services</li>
-                <li>Products</li>
-                <li>Blog</li>
-                <li>Contact</li>
+            <ul class="nav">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
+            <div class="dropdown">
+                <button class="dropBtn">Menu</button>
+                <div class="dropdownContent">
+                    <a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Services</a>
+                    <a href="#">Products</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contact</a>
+                </div>
+            </div>
         </nav>
     </div>
 </header>
